--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "notistack": "^3.0.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-helmet-async": "^1.3.0",
     "react-icons": "^4.11.0",
     "react-router-dom": "^6.16.0",
     "react-tabs": "^6.0.2",
